src/test/deca/syntax/valid/asm_method2.deca
//Description
//    Vérifier la decl d'asm method
//
//Résultats :
//   Ok
//

class A{
  void test() asm ("Bonjour
  legal
  France");
}

{
A a = new A();
a.test();
}
