src/test/deca/syntax/invalid/method_in_main.deca
//Description
//    Vérifier la decl d'une methode dans le main
//
//Résultats :
//    Erreur Lexicale/Syntaxique :
//    Ligne 9

{
void getX(){
;
}
}
